# gotify-msg

./: .gitignore  QUICKSTART.md  README.md  start-dev.sh
.github/workflows/: publish.yml
src/: index.html  main.js  notification.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json  main.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  config.rs  gotify.rs  main.rs
